# browser-flow

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
browser_common/: README.md  __init__.py
browser_common/browser_logging/: README.md  __init__.py  logging.yaml  logging_config.py  logging_manager.py
browser_common/llm/: llm_deepseek.py  llm_qwen.py
browser_control/: agent_hand.py  browser_types.py  inference.py  prompts.py
browser_control/handler/: __init__.py  act_handler.py  extract_handler.py  observe_handler.py
browser_control/handler/utils/: __init__.py  page_methods.py  utils.py
browser_flow/: __init__.py  browser_flow.py  graph.py  nodes.py  operator_handler.py  registry.py  version.py
browser_flow/flow_types/: __init__.py  chat_message.py  errors.py  graph_chain.py  llm_error.py  sh_graph_state.py
browser_flow/graphs/: __init__.py  base.py  sh_graph.py
browser_flow/handlers/: base.py  browser_handlers.py
browser_flow/handlers/rag/: __init__.py  embeddings_manager.py  rag_engine.py
browser_flow/handlers/samples/: __init__.py  main.py  workflow.py
browser_flow/nodes/: base.py  conditional_node.py  counter_node.py  executor_node.py  plan_node.py
browser_flow/tools/: base.py  browser_tools.py
browser_flow/utils/: __init__.py  graph_session_manager.py  prompts.py  tools_registry.py  utils.py
browser_graph/: ARCHITECTURE.md  CLASS_DESIGN.md  QUICKSTART.md  README.md  __init__.py
browser_graph/examples/: run.sh  run_simple_graph.py
browser_graph/graph/: __init__.py  base.py  simple_graph.py
browser_graph/graph_types/: __init__.py  output_schema.py  state.py
browser_graph/handlers/: __init__.py  base.py  calculator.py
browser_graph/nodes/: __init__.py  agent_node.py  base.py  tool_node.py
browser_graph/tools/: __init__.py  base.py  calculator_tools.py
browser_graph/utils/: __init__.py  tools_description.py
browser_wrapper/: __init__.py  stagehand.py  stagehand_context.py  stagehand_page.py  utils.py  version.py
browser_wrapper/browser_types/: __init__.py  context.py  stagehand_errors.py  types.py
browser_wrapper/dom/: script_content.py
browser_wrapper/utils/: __init__.py  a11y_utils.py  browser.py  deep_locator_utils.py  utils.py
test/: __init__.py
test/browser-control/: scroll.py  test_browser_control_functionality.py
test/browser-flow/: demo_ql_workflow.py  demo_ql_workflow_2.py  demo_wl.py  example.py  find_jd_in_site.py
test/browser-graph/: broswer_graph.py  run_bs4.py  run_trafilatura_demo.py
test/browser-wrapper/: test_browser_wrapper_integration.py  test_stagehand_page_context.py
test/browser_common/: test_browser_logging.py  test_llm.py
(+4 files in other folders)
